configuration database and uploadsPath validation

--- a/backup.dist.conf
+++ b/backup.dist.conf
@@ -1,4 +1,5 @@
 # You can change theses variables to fit your needs
+databaseType='mysql' # mysql|mongo
 databaseUser='user'
 databasePass='password'
 databaseName='database_name'
