--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
   "name": "widop/backup",
-  "description": "Database and files backup script with logrotate and rclone"
+  "description": "Database and files backup script with logrotate and rclone",
+  "scripts": {
+    "post-install-cmd": [
+      "./install.sh"
+    ]
+  }
 }
